# QManage

./: CMakeLists.txt  Main.qml  Theming.qml  main.cpp
Android/: CMakeLists.txt  splashscreencontroller.cpp  splashscreencontroller.h
Resources/: AndroidButton.qml  Assets.qrc  CMakeLists.txt  DesktopButton.qml  ThemedButton.qml
Session/: .qmlls.ini  CMakeLists.txt  accessmanageraccessor.cpp  accessmanageraccessor.h  localrepository.cpp  localrepository.h  remoterepository.cpp  remoterepository.h  session.cpp  session.h  sessionState.h  sessioncontroller.cpp  sessioncontroller.h  sessionrepository.cpp  sessionrepository.h  token.cpp  token.h
Welcome/: CMakeLists.txt  signinviewmodel.cpp  signinviewmodel.h
Welcome/qml/: MyAnimatedShape.qml  MyMessageBox.qml  SignInForum.qml  Welcome.qml  WelcomeLayout.qml
android/: AndroidManifest.xml
android/res/drawable/: splashscreen.xml
